--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script defer src="https://unpkg.com/p5.collide2d"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <!--<script src="p5/p5.js"></script> -->  <!-- 載入 p5.js -->
+    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.20.0/build/matter.min.js"></script>
+
+
     <script type = "module" src="sketch.js"></script>  <!-- 你的程式碼 -->
 </head>
 <body>
