--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My p5.js Sketch</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
+      <!--  原本的太容易掛掉換一個 -->
     <script defer src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <!--<script src="p5/p5.js"></script> -->  <!-- 載入 p5.js -->
+
+    <!--  使用matter 物理引擎 做碰撞檢測 -->
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.20.0/build/matter.min.js"></script>
 
+      <!-- POSE -->
+      <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
 
+      
     <script type = "module" src="sketch.js"></script>  <!-- 你的程式碼 -->
 </head>
 <body>
