新增圓形效果類別，重構計分板UI，更新遊戲倒數邏輯，調整曲線移動效果的速度計算，並修正相關導入路徑

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
 
     
-
+    <script src="https://idmnyu.github.io/p5.js-func/p5.func.js"></script>
+      
     <script type = "module" src="sketch.js"></script>  <!-- 你的程式碼 -->
 </head>
 <body>
