--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <!--<script src="p5/p5.js"></script> -->  <!-- 載入 p5.js -->
+    <!-- 載入串接Arduino套件 -->
+    <script src="https://unpkg.com/p5.serialport@latest/lib/p5.serialport.js"></script>
 
     <!--  使用matter 物理引擎 做碰撞檢測 -->
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.20.0/build/matter.min.js"></script>
